[gd_scene load_steps=9 format=3 uid="uid://bk46lmvt5rd8d"]

[ext_resource type="Texture2D" uid="uid://ds66da13on5uc" path="res://assets/sprite/slime/slime_0001.png" id="1_i6ywt"]
[ext_resource type="Script" uid="uid://kwx0gvr6gl5d" path="res://src/enemys/slime.gd" id="1_jx028"]
[ext_resource type="Texture2D" uid="uid://c3xuqpnlllal4" path="res://assets/sprite/slime/slime_0002.png" id="2_sx7qk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5jhuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i6ywt")
}, {
"duration": 1.0,
"texture": ExtResource("2_sx7qk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do8yl"]
size = Vector2(64, 84)

[sub_resource type="Animation" id="Animation_yd5qf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8ifdx"]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnayo"]
_data = {
&"RESET": SubResource("Animation_yd5qf"),
&"damage": SubResource("Animation_8ifdx")
}

[node name="slime" type="Area2D" groups=["enemys"]]
script = ExtResource("1_jx028")

[node name="s" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_5jhuy")
frame_progress = 0.458796

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-18, 20)
shape = SubResource("RectangleShape2D_do8yl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="damageanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnayo")
}

[node name="explosion" type="Marker2D" parent="."]
position = Vector2(-18, 18)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="death" from="." to="." method="_on_death"]
[connection signal="animation_finished" from="damageanim" to="." method="_on_damageanim_animation_finished"]
